<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/greeting_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/greeting_label"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/greeting_label"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="140dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dark_green"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/card_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/flower" />

                <TextView
                    android:id="@+id/card_heading_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="6dp"
                    android:layout_toEndOf="@+id/card_image"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/card_heading_label"
                    android:textColor="@color/light_green"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/card_description_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/card_heading_label"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="4dp"
                    android:layout_toEndOf="@+id/card_image"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/card_heading_description"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:lineHeight="22dp"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_2"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_1">

        <TextView
            android:id="@+id/temperature_label"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:text="@string/temperature_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:layout_marginTop="10dp">

            <RelativeLayout
                android:layout_width="166dp"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/card_image2"
                    android:layout_width="166dp"
                    android:layout_height="114dp"
                    app:srcCompat="@drawable/temperature" />

                <TextView
                    android:id="@+id/label_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="Temperature : %1$.2f"
                    android:textColor="@color/dark_green"
                    android:textSize="14sp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_3"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_1">

        <TextView
            android:id="@+id/light_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/light_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/temperature_label" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:layout_marginTop="10dp">

            <RelativeLayout
                android:layout_width="166dp"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/card_image3"
                    android:layout_width="166dp"
                    android:layout_height="114dp"
                    app:srcCompat="@drawable/light" />

                <TextView
                    android:id="@+id/label_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/label_light"
                    android:textColor="@color/dark_green"
                    android:textSize="14sp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <Button
        android:id="@+id/btn_location"
        android:layout_width="166dp"
        android:layout_height="85dp"
        android:text="@string/maps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_2"
        app:layout_constraintVertical_bias="0.135" />

    <Button
        android:id="@+id/btn_product"
        android:layout_width="166dp"
        android:layout_height="85dp"
        android:text="@string/products"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.265"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_3"
        app:layout_constraintVertical_bias="0.135" />


</androidx.constraintlayout.widget.ConstraintLayout>