<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentActivity">

    <TextView
        android:id="@+id/all_products_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/all_products_label"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/all_products_label"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/card_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/sunflower" />

                <TextView
                    android:id="@+id/sunflower_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="6dp"
                    android:layout_toEndOf="@+id/card_image"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/sunflower_heading"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/sunflower_description_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sunflower_heading"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="4dp"
                    android:layout_toEndOf="@+id/card_image"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/sunflower_description_label"
                    android:textColor="@color/grey"
                    android:textSize="11sp"/>

                <FrameLayout
                    android:id="@+id/fragment_container1"
                    android:name="com.example.appproject.SimpleFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:layout="@layout/fragment_simple"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="4dp"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <Button
        android:id="@+id/btn_show_rating"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/open"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.265"
        app:layout_constraintVertical_bias="0.135" />
</androidx.constraintlayout.widget.ConstraintLayout>